# mtp

./: CMakeLists.txt  README.md
core/client/: actor_client.cc  actor_client.h  client_actor.cc  client_actor.h  tcp_client.cc  tcp_client.h
core/common/: actor.h  actor.pb.cc  actor.pb.h  actor.proto  const.h  epoller.cc  epoller.h  et_epoller.cc  et_epoller.h  helper.h  logger.h  lt_epoller.cc  lt_epoller.h  mail.cc  mail.h  myrpc_channel.cc  myrpc_channel.h  myrpc_controller.h  object_pool.h  reflect.h  rpc_package.pb.cc  rpc_package.pb.h  rpc_package.proto  timer.cc  timer.h
core/server/: actor_server.cc  actor_server.h  message_type.cc  message_type.h  messager.cc  messager.h  server_actor.cc  server_actor.h  tcp_server.cc  tcp_server.h  worker.cc  worker.h
examples/room/: CMakeLists.txt  room_client.cc  room_server.cc
examples/room/client_actor/: user.h
examples/room/protos/: gen_proto.py  room.pb.cc  room.pb.h  room.proto
examples/room/reflect/: client_reflect.cc  server_reflect.cc
examples/room/server_actors/: room.h  user_service.h
examples/word_count/: CMakeLists.txt  word_count_server.cc
examples/word_count/data/: 1.txt
examples/word_count/protos/: word_count.pb.cc  word_count.pb.h  word_count.proto
examples/word_count/reflect/: gen_reflect.py  server_reflect.cc
examples/word_count/server_actors/: word_count.h
